# BINARY

./: .all-contributorsrc  .clang-format  .gdbinit  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  documentation.yaml  install.yml  linux.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
cmake/: CPM.cmake  FetchFmt.cmake  FindDEFLATE.cmake  FindDeflate.cmake  FindHTSlib.cmake  functions.cmake  htslib.cmake  tools.cmake  zlib.cmake
documentation/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.md  installation.md  namespace.md  requirements.txt
documentation/current_tools/: sv2nl.md
documentation/pages/: about.dox  installations.md
documentation/tools/: index.md  sv2nl.md
include/: utils.h  vcf_reader.h
include/sv2nl/: output_container.h  test.h  vcf_reader.h
source/: test.cpp  vcf_reader.cpp
src/: main.cpp  vcf_reader.cpp
standalone/: CMakeLists.txt  utils.cpp
standalone/include/: detect_dup.hpp  thread_pool.hpp  thread_safe_queue.hpp  util.hpp  utils.hpp
standalone/source/: detect_dup.cpp  main.cpp  sv2nl.cpp  util.cpp  utils.cpp
standalone/sv2nl/include/: detect_dup.hpp  detect_mapping.hpp  helper.hpp  mapper.hpp  options.hpp  threadsafe_map.hpp  vcf_info.hpp  vcf_interval.hpp  writer.hpp
standalone/sv2nl/source/: detect_dup.cpp  detect_mapping.cpp  helper.cpp  main.cpp  mapper.cpp  vcf_info.cpp  vcf_interval.cpp  writer.cpp
test/: CMakeLists.txt
test/data/: debug.vcf  debug.vcf.gz.tbi  debug_uncom.vcf  rck.acnt.tsv  rck.scnt.tsv
test/source/: main.cpp  test_interval_tree.cpp  test_vcf.cpp  test_vcfreader.cpp
test/source/test_algorithm/: test_interval_tree.cpp  test_rb_tree.cpp
test/source/test_parser/: test_csv.cpp  test_vcf.cpp
test/source/test_utils/: test_utils.cpp
